fix button display on tablet/mobile

--- a/src/sass/components/_catalog.scss
+++ b/src/sass/components/_catalog.scss
@@ -11,7 +11,7 @@
         @include tablet {
             width: max-content;
             height: 100vh;
-            background: $main-bg;
+            background-color: $main-bg;
             padding: 1rem;
             position: fixed;
             left: 0;
@@ -59,20 +59,20 @@
         }
     }
 
-    &__toggle {
-        display: none;
-
-        &include tablet {
-            display: block;
-            margin-bottom: 2rem;
-        }
-    }
-
     &__content {
         flex-grow: 1;
 
         @include tablet {
             width: 100%;
+        }
+    }
+
+    &__filter__toggle {
+        display: none;
+
+        @include tablet {
+            display: block;
+            margin-bottom: 2rem;
         }
     }
 }
